# kty04-secrecy-system

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PERMISSIONS.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  start.sh  test_api.py  test_e2e.py
backend/: app.py
backend/api/: audit.py  auth.py  documents.py  groups.py  members.py  signatures.py
backend/utils/: auth.py  database.py  key_manager.py
docs/: README.md  THESIS_DIAGRAMS.md
docs/perf/: kty04_group_size_raw_20260318.csv  kty04_group_size_summary_20260318.csv
frontend/: index.html
frontend/css/: style.css
frontend/js/: main.js
scripts/: env-check.sh
tests/: conftest.py
tests/functional/: test_auth_and_permissions.py  test_document_flow.py
tests/performance/: test_api_performance.py
